--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- Add TextView to display the date -->
+
+    <!-- Add CalenderView to display the Calender -->
+
     <TextView
+        android:id="@+id/date_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="27dp"
+        android:textColor="@android:color/background_dark"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        tools:text="Set the Date"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <CalendarView
+        android:id="@+id/calender"
+        android:layout_width="368dp"
+        android:layout_height="359dp"
+        android:layout_below="@+id/date_view"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="21dp"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/holidays"
+        android:layout_width="129dp"
+        android:layout_height="63dp"
+        android:layout_below="@+id/calender"
+        android:layout_marginTop="45dp"
+        android:layout_centerHorizontal="true"
+        tools:text="No holiday"/>
+
+
+</RelativeLayout>
